# MADS-ML-Marn_X

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
old/: chain_thaw.ipynb  convolutions.py  fme.py  hypertune.py  hypertune_poging_nieuw.py  laatst.py  oeps.py  test.py  track_test.py  track_test_copy.py  tracking.py
src/marn_x/: 04_transfer_learning_with_resnet.ipynb  __init__.py  chain_thaw.ipynb  chain_thaw.py  custom_factories.py  eurosat.py  extract_hyperparameter_results.py  fektor.py  hypertune.py  hypertune_fresh.py  hypertuning_mlflow.py  main.py  new.py  new_factories.py  rnn.py  settings.py  track_test.py
src/marn_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
