[project]
name = "mads-ml-marn-x"
version = "0.1.0"
description = "Marnix' version of the MADS_ML module of ADS"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mads-datasets>=0.3.14",
    "mltrainer>=0.2.2",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "ray[data,serve,train,tune]>=2.46.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "tokenizers>=0.21.1",
    "toml>=0.10.2",
    "tomlserializer>=0.2.0",
    "torch>=2.7.0",
    "torch-tb-profiler>=0.4.3",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
